# rodinia

common/: make.config
opencl/kmeans/: CMakeLists.txt  Makefile  build_arm_gnueabi_cmake.sh  kmeans.cpp  kmeans.h  read_input.c
